center all text

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: var(--color-lt-1);
+  text-align: center;
 }
 
 body,
